<resources>
    <string name="app_name">AboutView</string>
    <string name="my_day_dream_label">MyDayDream</string>
    <string name="scale">按数值缩放</string>
    <string name="scale_ratio">按比例缩放</string>
    <string name="crop_effect">裁剪</string>
    <string name="rotate_effect_CW">顺时针旋转</string>
    <string name="rotate_effect_CCW">逆时针旋转</string>
    <string name="skew_effect">偏移效果</string>

    <string name="image_process">图像处理</string>
    <string name="contact_activity">联系人模块</string>
    <string name="float_bar_activity">悬浮窗</string>
    <string name="drawer_line_activity">十字坐标点击跟随</string>

    <string name="circles_top_title">选择你喜欢的圈圈</string>

    <string name="action_delete_all">Delete all items</string>
    <string name="note">All items here</string>
    <string name="action_people_activity">go to people activity</string>

    <string name="title_add_data_activity">Add Data</string>
    <string name="title_edit_data">Edit Data</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_email">Email</string>
    <string name="done_add_data">Add data</string>
    <string name="done_edit_data">Finish</string>

    <string name="delete_message">Delete this item?</string>
    <string name="delete_all_message">Delete all?</string>
    <string name="delete_all_yes">Yes, kill them all</string>
    <string name="delete_all_cancel">NO</string>


    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

</resources>
